--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-flowtype",
   "version": "1.0.1",
   "description": "React implementation of flowtype.js: font-size based on element width. Allows you to keep the ideal amount of characters per line, while scaling font size.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack --optimize-minimize"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,12 @@
   "homepage": "https://github.com/bond-agency/react-flowtype#readme",
   "dependencies": {
     "react": "^15.4.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.14.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0"
   }
 }
